# telegram_msg_cleaner

./: .gitignore  CHANGELOG.md  COMMANDS.md  PROJECT_ARCHITECTURE_OVERVIEW.md  README.md  ROADMAP.md  TODO.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: cleanup_exports.py  export_user_context_from_db.py  migrate_to_db.py
tests/: test_alias_manager.py  test_cleaner.py  test_cli.py  test_concurrency.py  test_config.py  test_data_model.py  test_db_exporter.py  test_file_writer.py  test_observability.py  test_services.py  test_storage_sqlite.py  test_sync_system.py  test_telegram_core.py
tg_message_cleaner/: cli.py  core.py  exporter.py
tg_msg_manager/: __init__.py  cli.py  cli_io.py  core.py  exporter.py  i18n.py  models.py  pm_exporter.py  scheduler.py  setup.py  storage.py
tg_msg_manager/core/: __init__.py  config.py  context.py  logging.py  process.py  runtime.py  service_events.py  telemetry.py
tg_msg_manager/core/models/: message.py  service_payloads.py  setup.py  sync_report.py
tg_msg_manager/core/telegram/: client.py  interface.py  throttler.py
tg_msg_manager/infrastructure/storage/: _sqlite_read_path.py  _sqlite_schema.py  _sqlite_sync_state.py  _sqlite_write_path.py  interface.py  records.py  sqlite.py
tg_msg_manager/services/: alias_manager.py  cleaner.py  context_engine.py  db_exporter.py  exporter.py  file_writer.py  private_archive.py  scheduler.py
